--- a/src/main/resources/com/example/jfxdemo2/hello-view.fxml
+++ b/src/main/resources/com/example/jfxdemo2/hello-view.fxml
@@ -6,6 +6,17 @@
 <?import javafx.scene.text.*?>
 
 <FlowPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="800.0" style="-fx-cursor: none;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    
+
+    <TextField>
+        <font>
+            <Font size="28.0" />
+        </font>
+        <cursor>
+            <Cursor fx:constant="NONE" />
+        </cursor></TextField>
+    <Button text="Send">
+      <font>
+         <Font size="28.0" />
+      </font></Button>
 
 </FlowPane>
