--- a/src/main/resources/com/example/jfxdemo2/hello-view.fxml
+++ b/src/main/resources/com/example/jfxdemo2/hello-view.fxml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.text.Font?>
+<HBox minHeight="480.0" minWidth="800.0" stylesheets="@blessedjavafx.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.geoaxis.blessedjavafxrpi3.SensorTagScannerController">
 
-<FlowPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="800.0" style="-fx-cursor: none;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+    <VBox fx:id="scanningPane">
+        <FlowPane>
+            <Button fx:id="scanButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onScanButton" styleClass="large-text" text="Scan" />
+            <Label fx:id="status" styleClass="small-text" text="Ready" />
+            <ProgressIndicator fx:id="progressIndicator" progress="-1.0" />
+        </FlowPane>
+        <ListView fx:id="devices" />
+    </VBox>
 
-    <TextField>
-        <font>
-            <Font size="28.0" />
-        </font>
-        <cursor>
-            <Cursor fx:constant="NONE" />
-        </cursor></TextField>
-    <Button text="Send">
-      <font>
-         <Font size="28.0" />
-      </font></Button>
 
-</FlowPane>
+    <VBox fx:id="datePane">
+        <Button fx:id="disconnectButton" mnemonicParsing="false" onAction="#onDisconnect" styleClass="large-text" text="Disconnect" />
+        <Label styleClass="temperature-labels" text="IR Temperature" />
+        <Label fx:id="irTemperatureLabel" styleClass="temperature-measurement" text="00.00" />
+        <Label styleClass="temperature-labels" text="Ambient Temperature" />
+        <Label fx:id="ambientTemperatureLabel" styleClass="temperature-measurement" text="00.00"/>
+    </VBox>
+</HBox>
